[YAML] Add descriptions to YAML files
In many cases, these are copied from the corresponding CTI file. In some
cases, the source of the data is unknown and these are also noted.

--- a/data/KOH.yaml
+++ b/data/KOH.yaml
@@ -1,3 +1,7 @@
+description: |-
+  A collection of potassium, oxygen, and hydrogen phases. Includes
+  charged species in addition to neutral species.
+
 generator: cti2yaml
 cantera-version: 2.5.0a3
 date: Wed, 11 Dec 2019 16:59:04 -0500
