--- a/data/ohn.yaml
+++ b/data/ohn.yaml
@@ -1,3 +1,5 @@
+description: This definition extracts the O/H/N submechanism from GRI-Mech 3.0
+
 generator: cti2yaml
 cantera-version: 2.5.0a3
 date: Wed, 11 Dec 2019 16:59:14 -0500
