--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/google/googletest.git
 [submodule "ext/sundials"]
 	path = ext/sundials
-	url = https://github.com/Cantera/sundials-mirror
+	url = https://github.com/LLNL/sundials
 [submodule "ext/eigen"]
 	path = ext/eigen
 	url = https://github.com/eigenteam/eigen-git-mirror
