--- a/data/gri30_highT.yaml
+++ b/data/gri30_highT.yaml
@@ -29,6 +29,7 @@ phases:
     CH3CHO]
   kinetics: gas
   reactions: all
+  transport: mixture-averaged
   state:
     T: 300.0
     P: 1.01325e+05
@@ -46,6 +47,13 @@ phases:
   state:
     T: 300.0
     P: 1.01325e+05
+  deprecated: >-
+    The phase 'gri30_mix' in the file 'gri30_highT.yaml' is deprecated and will be
+    removed after Cantera 2.5. The default phase 'gri30' now includes
+    mixture-averaged transport properties by default and should be preferred.
+    Please see the webpage at
+    https://github.com/Cantera/cantera/wiki/deprecate_gri30_phases for more
+    information.
 - name: gri30_multi
   thermo: ideal-gas
   elements: [O, H, C, N, Ar]
@@ -60,6 +68,16 @@ phases:
   state:
     T: 300.0
     P: 1.01325e+05
+  deprecated: >-
+    The phase 'gri30_multi' in the file 'gri30_highT.yaml' is deprecated and will be
+    removed after Cantera 2.5. You can use multi-component diffusion by including
+    an optional argument to 'Solution':
+      Python: ct.Solution('gri30.yaml', transport_model='Multi')
+      MATLAB: Solution('gri30.yaml','gri30','Multi')
+      C++: newSolution("gri30.yaml", "gri30", "Multi")
+    Please see the webpage at
+    https://github.com/Cantera/cantera/wiki/deprecate_gri30_phases for more
+    information.
 
 species:
 - name: H2
