[Test] Fix coverage oscillation in HMWSoln::setBinarySalt
Make a test case which always requires swapping the species

--- a/test/data/thermo-models.yaml
+++ b/test/data/thermo-models.yaml
@@ -137,7 +137,7 @@ phases:
       beta2: [0.0, 0.0, 0.0, 0.0, 0.0]
       Cphi: [0.00127, -4.655E-5, 0.0, 33.317, 0.09421]
       alpha1: 2.0
-    - species: [H+, Cl-]
+    - species: [Cl-, H+]
       beta0: [0.1775]
       beta1: [0.2945]
       beta2: [0.0]
