[CI] Install numpy for Python 2 so CSV diff tests can run on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
       - python3-numpy
       - python3-setuptools
       - scons
+      - python-numpy
       - gfortran
       - libsundials-serial-dev
       - liblapack-dev
