--- a/samples/cxx/LiC6_electrode/LiC6_electrodebulk.yaml
+++ b/samples/cxx/LiC6_electrode/LiC6_electrodebulk.yaml
@@ -1,3 +1,9 @@
+description: |-
+  Source unknown. Serves as input for LiC6_electrode example(s).
+
+  Note: This input file serves for illustration purposes only and should not be
+  used as basis for research and/or development.
+
 generator: ctml2yaml
 cantera-version: 2.5.0a3
 date: Fri, 13 Dec 2019 20:48:20 -0500
