--- a/test/data/thermo-models.yaml
+++ b/test/data/thermo-models.yaml
@@ -188,6 +188,11 @@ phases:
   thermo: Redlich-Kwong
   state: {T: 300, P: 200 atm, mole-fractions: {CO2: 0.9998, H2O: 0.0002}}
 
+- name: CO2-PR
+  species: [{pr-species: [CO2, H2O, H2]}]
+  thermo: Peng-Robinson
+  state: {T: 300, P: 200 atm, mole-fractions: {CO2: 0.9998, H2O: 0.0002}}
+
 - name: nitrogen
   species: [N2]
   thermo: pure-fluid
@@ -587,6 +592,60 @@ rk-species:
     units: {length: cm, pressure: bar, quantity: mol}
     a: [7.54e7, -4.13e4]
     b: 27.80
+
+
+pr-species:
+- name: H2
+  composition: {H: 2}
+  thermo:
+    model: NASA7
+    temperature-ranges: [200.0, 1000.0, 3500.0]
+    data:
+    - [2.34433112, 0.00798052075, -1.9478151e-05, 2.01572094e-08, -7.37611761e-12,
+      -917.935173, 0.683010238]
+    - [3.3372792, -4.94024731e-05, 4.99456778e-07, -1.79566394e-10, 2.00255376e-14,
+      -950.158922, -3.20502331]
+  equation-of-state:
+    model: Peng-Robinson
+    units: {length: cm, quantity: mol}
+    a: 2.668423E+10
+    b: 16.5478
+    w_ac: -0.22
+- name: H2O
+  composition: {H: 2, O: 1}
+  thermo:
+    model: NASA7
+    temperature-ranges: [200.0, 1000.0, 3500.0]
+    data:
+    - [4.19864056, -0.0020364341, 6.52040211e-06, -5.48797062e-09, 1.77197817e-12,
+      -30293.7267, -0.849032208]
+    - [3.03399249, 0.00217691804, -1.64072518e-07, -9.7041987e-11, 1.68200992e-14,
+      -30004.2971, 4.9667701]
+  equation-of-state:
+    model: Peng-Robinson
+    units: {length: cm, quantity: mol}
+    a: 5.998873E+11
+    b: 18.9714
+    w_ac: 0.344
+    binary-a:
+      H2: 4 bar*cm^6/mol^2
+      CO2: 7.897e7 bar*cm^6/mol^2
+- name: CO2
+  composition: {C: 1, O: 2}
+  thermo:
+    model: NASA7
+    temperature-ranges: [200.0, 1000.0, 3500.0]
+    data:
+    - [2.35677352, 0.00898459677, -7.12356269e-06, 2.45919022e-09, -1.43699548e-13,
+      -48371.9697, 9.90105222]
+    - [3.85746029, 0.00441437026, -2.21481404e-06, 5.23490188e-10, -4.72084164e-14,
+      -48759.166, 2.27163806]
+  equation-of-state:
+    model: Peng-Robinson
+    units: {length: cm, quantity: mol}
+    a: 3.958134E+11
+    b: 26.6275
+    w_ac: 0.228
 
 
 HMW-species:
