--- a/samples/f90/SConscript
+++ b/samples/f90/SConscript
@@ -18,7 +18,7 @@ for programName, sources in samples:
                 F90PATH='#build/src/fortran',
                 LIBS=['cantera_fortran']+env['cantera_libs']+stdlib,
                 LIBPATH=[env['sundials_libdir'], env['blas_lapack_dir'],
-                         '#build/lib'])
+                         env['extra_lib_dirs'], '#build/lib'])
 
     # Generate SConstruct files to be installed
     incdirs = [pjoin(localenv['ct_incroot'], 'cantera')] + localenv['extra_inc_dirs']
