--- a/samples/f77/SConscript
+++ b/samples/f77/SConscript
@@ -23,7 +23,7 @@ for program_name, fortran_sources in samples:
                 LIBS=env['cantera_libs']+['cantera_fortran']+stdlib,
                 LIBPATH=[env['sundials_libdir'], localenv['blas_lapack_dir'],
                          env['extra_lib_dirs'], '#build/lib'],
-                LINK='$F77')
+                LINK='$FORTRAN_LINK')
 
 # Generate SConstruct file to be installed
 incdirs = (localenv['ct_incroot'], localenv['sundials_include'],
