[Test] Add regression test using C++ flamespeed sample
Add optional command line arguments to the sample so that it can
produce stable output.

--- a/test_problems/.gitignore
+++ b/test_problems/.gitignore
@@ -57,6 +57,7 @@ cxx_ex/tr1.csv
 cxx_ex/tr1.dat
 cxx_ex/tr2.csv
 cxx_ex/tr2.dat
+cxx_samples/flamespeed.csv
 diamondSurf/diamond.xml
 diamondSurf/runDiamond
 fracCoeff/fracCoeff
