--- a/test_problems/.gitignore
+++ b/test_problems/.gitignore
@@ -58,6 +58,7 @@ cxx_ex/tr1.dat
 cxx_ex/tr2.csv
 cxx_ex/tr2.dat
 cxx_samples/flamespeed.csv
+cxx_samples/combustor_cxx.csv
 diamondSurf/diamond.xml
 diamondSurf/runDiamond
 fracCoeff/fracCoeff
