--- a/test_problems/SConscript
+++ b/test_problems/SConscript
@@ -231,6 +231,9 @@ CompileAndTest('clib', 'clib_test', 'clib_test',
                extensions=['^clib_test.c'], libs=['cantera_shared'])
 
 # C++ Samples
+Test('cxx-combustor', 'cxx_samples', '#build/samples/cxx/combustor/combustor', None,
+     comparisons=[('combustor_cxx_blessed.csv', 'combustor_cxx.csv')],
+     threshold=1e-10, tolerance=2e-4)
 Test('cxx-flamespeed', 'cxx_samples', '#build/samples/cxx/flamespeed/flamespeed',
      'cxx_flamespeed_blessed.txt',
      comparisons=[('flamespeed_blessed.csv', 'flamespeed.csv')],
