[Test]: Add regression test of c++ 'kinetics1' sample program
Remove the existing cxx_ex test which duplicates this sample.

Differences in blessed output are a result of updates to atomic weights
in dc96fb5fe8.

--- a/test_problems/.gitignore
+++ b/test_problems/.gitignore
@@ -47,16 +47,12 @@ clib_test/clib_test
 cxx_ex/cxx_examples
 cxx_ex/eq1.csv
 cxx_ex/eq1.dat
-cxx_ex/kin1.csv
-cxx_ex/kin1.dat
-cxx_ex/kin2.csv
-cxx_ex/kin2.dat
-cxx_ex/kin3.csv
-cxx_ex/kin3.dat
 cxx_ex/tr1.csv
 cxx_ex/tr1.dat
 cxx_ex/tr2.csv
 cxx_ex/tr2.dat
+cxx_samples/kin1.dat
+cxx_samples/kin1.csv
 cxx_samples/flamespeed.csv
 cxx_samples/combustor_cxx.csv
 diamondSurf/diamond.xml
