--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,12 @@ on:
       - master
 
 jobs:
-  multiple-pythons:
-    name: ${{ matrix.os }} with Python ${{ matrix.python-version }}
-    runs-on: ${{ matrix.os }}
+  ubuntu-multiple-pythons:
+    name: Ubuntu 18.04 with Python ${{ matrix.python-version }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [ '3.5', '3.6', '3.7', '3.8' ]
-        os: [ ubuntu-latest, macos-latest]
       fail-fast: false
     steps:
     - uses: actions/checkout@v2
@@ -35,10 +34,36 @@ jobs:
         architecture: x64
     - name: Install Apt dependencies
       run: sudo apt-get install libboost-dev gfortran
-      if: runner.os == 'Linux'
+    - name: Upgrade pip
+      run: python3 -m pip install -U pip setuptools
+    - name: Install Python dependencies
+      run: python3 -m pip install ruamel.yaml scons numpy cython h5py
+    - name: Build Cantera
+      run: python3 `which scons` build -j2
+    - name: Test Cantera
+      run: python3 `which scons` test
+    - name: Build Samples
+      run: python3 `which scons` samples
+
+  macos-multiple-pythons:
+    name: macOS with Python ${{ matrix.python-version }}
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: [ '3.5', '3.6', '3.7', '3.8' ]
+      fail-fast: false
+    steps:
+    - uses: actions/checkout@v2
+      name: Checkout the repository
+      with:
+        submodules: recursive
+    - name: Setup Python
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+        architecture: x64
     - name: Install Brew dependencies
       run: brew install boost libomp
-      if: runner.os == 'macOS'
     - name: Upgrade pip
       run: python3 -m pip install -U pip setuptools
     - name: Install Python dependencies
@@ -57,7 +82,7 @@ jobs:
   coverage:
     name: Coverage
     runs-on: ubuntu-latest
-    needs: multiple-pythons
+    needs: [ubuntu-multiple-pythons]
     steps:
     - uses: actions/checkout@v2
       name: Checkout the repository
@@ -150,8 +175,6 @@ jobs:
         run: scons build python_cmd=/usr/bin/python3 blas_lapack_libs=lapack,blas -j2
       - name: Test Cantera
         run: scons test
-      - name: Run Test Problems
-        run: scons test_problems
       - name: Build Samples
         run: scons samples
 
