--- a/test_problems/SConscript
+++ b/test_problems/SConscript
@@ -231,7 +231,8 @@ CompileAndTest('clib', 'clib_test', 'clib_test',
                extensions=['^clib_test.c'], libs=['cantera_shared'])
 
 if env['f90_interface'] == 'y':
-    Test('f90-demo', 'fortran', '#build/samples/f90/demo', 'f90_demo_blessed.txt')
+    Test('f90-demo', 'fortran', '#build/samples/f90/demo', 'f90_demo_blessed.txt',
+         threshold=1e-10)
     Test('f77-isentropic', 'fortran', '#build/samples/f77/isentropic',
          'f77_isentropic_blessed.txt')
     Test('f77-ctlib', 'fortran', '#build/samples/f77/ctlib', 'f77_ctlib_blessed.txt')
